<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lists.AddReunionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarAddReu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarAddReu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="Créer une réunion"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Réservez votre salle">

            </TextView>

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                >

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:text="Jour et Heure">

            </TextView>

            <EditText
                android:id="@+id/date_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:editable="false"
                android:hint="Sélectionner la date">
            </EditText>

            <EditText
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:editable="false"
                android:hint="Sélectionner l'heure">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:text="Sujet de la réunion">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSujet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:hint="Sujet">

            </com.google.android.material.textfield.TextInputEditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Participants (email)"
                android:layout_marginBottom="16dp">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ajoutParticipant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="participants (séparés par une virgule)"
                android:layout_marginBottom="16dp">

            </com.google.android.material.textfield.TextInputEditText>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/buttonAddReu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="Ajoutez votre réunion"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary">

            </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>