<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <item
        android:id="@+id/filter_date"
        android:title="filtrer par date"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/filter_room"
        android:title="filtrer par salle"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset"
        android:title="reset"
        app:showAsAction="never" />


</menu>